--- a/apps/html/style.css
+++ b/apps/html/style.css
@@ -1,12 +1,29 @@
-html, body  {
-    margin: 0;
-    padding: 0;
+body {
+    margin:0;
+    height: 100%;
 }
 
 #map {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
+section {
+
+    height: 100%;
+    background: aqua;
+    margin: auto;
+}
+
+#sidebar {
+    width: 15%;
+    height: 100%;
+    background-color: #efefef;
+    float: left;
+}
+ 
+#main {
+    height:100%;
+    width: 75%;
+    display: inline-block;
 }
