--- a/apps/html/style.css
+++ b/apps/html/style.css
@@ -10,19 +10,19 @@ body {
 
 section {
     height: 100%;
-    background: aqua;
+
     margin: auto;
 }
-
+/*
 #sidebar {
     width: 25%;
     height: 100%;
     background-color: #efefef;
     float: left;
-}
+}*/
 
 #main {
     height:100%;
-    width: 75%;
+    width: 100%;
     display: inline-block;
 }
